# sensus

./: .gitignore  README.md  convert_icon.py  create_fish.py  package-lock.json  package.json
src/: index.html  main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  google_calendar.rs  main.rs  tests.rs
