[package]
name = "sensus-tauri"
version = "0.1.0"
edition = "2021"

[features]
custom-protocol = []

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "system-tray", "api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.29", features = ["bundled"] }
reqwest = { version = "0.11", features = ["json"] }
oauth2 = "4.4"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }

